# glue-jupyter

./: .constraints-bqplot012.txt  .deploy_docs.sh  .deploy_docs_key.enc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .ruff.toml  .travis.yml  .validate-notebooks.py  CHANGES.md  CHANGES.rst  LICENSE  MANIFEST.in  README.md  README.rst  RELEASE.rst  RELEASE_INSTRUCTIONS.md  azure-pipelines.yml  environment.yml  postBuild  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/: release.yml
.github/workflows/: ci_workflows.yml
binder/: Dockerfile  apt.txt  environment.yml  postBuild  setup.sh
docs/: Makefile  api.rst  conf.py  developer_notes.rst  getting_started.rst  index.rst  installing.rst  ui_description.rst
docs/img/: glue-jupyter_diagram.xml
docs/source/: conf.py  index.ipynb
examples/: restore_session_solara.py
glue_jupyter/: __init__.py  app.py  bqplot.py  compat.py  conftest.py  data.py  ipyvolume.py  ipywidgets_layout.py  layout_widget.vue  link.py  registries.py  session.py  state_traitlets_helpers.py  utils.py  view.py  vuetify_helpers.py  vuetify_layout.py
glue_jupyter/bqplot/: __init__.py  compatibility.py  histogram.py  image.py  scatter.py  view.py
glue_jupyter/bqplot/common/: __init__.py  reactviewer.py  tools.py  viewer.py
glue_jupyter/bqplot/histogram/: __init__.py  layer_artist.py  reacthistogram.py  viewer.py
glue_jupyter/bqplot/histogram/tests/: test_ui.py  test_viewer.py  test_visual.py
glue_jupyter/bqplot/image/: __init__.py  frb_mark.py  layer_artist.py  layer_style_widget.py  state.py  viewer.py
glue_jupyter/bqplot/image/tests/: test_ui.py  test_viewer.py  test_visual.py
glue_jupyter/bqplot/profile/: __init__.py  layer_artist.py  viewer.py  viewer_options_widget.py
glue_jupyter/bqplot/profile/tests/: test_viewer.py
glue_jupyter/bqplot/scatter/: __init__.py  layer_artist.py  layer_style_widget.py  scatter_density_mark.py  viewer.py  viewer_options_widget.py
glue_jupyter/bqplot/scatter/tests/: test_viewer.py  test_visual.py
glue_jupyter/bqplot/tests/: test_bqplot.py
glue_jupyter/bqplot/tests/data/: bqplot.ipynb
glue_jupyter/common/: basic_jupyter_toolbar.vue  hooks.py  slice_helpers.py  state3d.py  toolbar.py  toolbar_vuetify.py
glue_jupyter/common/state_widgets/: __init__.py  layer_histogram.py  layer_image.py  layer_image.vue  layer_profile.py  layer_profile.vue  layer_scatter.py  layer_scatter.vue  viewer_histogram.py  viewer_histogram.vue  viewer_image.py  viewer_image.vue  viewer_profile.py  viewer_profile.vue  viewer_scatter.py  viewer_scatter.vue  vuetify_helpers.py
glue_jupyter/common/state_widgets/tests/: test_viewer_image.py
glue_jupyter/common/tests/: test_slice_helpers.py  test_state3d.py
glue_jupyter/ipyvolume/: __init__.py  scatter.py  view.py  volume.py
glue_jupyter/ipyvolume/common/: __init__.py  tools.py  viewer.py  viewer_options_widget.py  viewer_options_widget.vue
glue_jupyter/ipyvolume/scatter/: __init__.py  layer_artist.py  layer_state.py  layer_style_widget.py  layer_style_widget.vue  viewer.py  viewer_options_widget.py  viewer_options_widget.vue
glue_jupyter/ipyvolume/scatter/tests/: __init__.py  test_viewer.py
glue_jupyter/ipyvolume/tests/: test_ipyvolume.py
glue_jupyter/ipyvolume/tests/data/: ipyvolume.ipynb
glue_jupyter/ipyvolume/volume/: __init__.py  layer_artist.py  layer_state.py  layer_style_widget.py  layer_style_widget.vue  viewer.py  viewer_options_widget.py  viewer_options_widget.vue
glue_jupyter/ipyvolume/volume/tests/: test_viewer.py
glue_jupyter/matplotlib/: base.py  histogram.py  image.py  profile.py  scatter.py
glue_jupyter/matplotlib/tests/: test_matplotlib.py
glue_jupyter/matplotlib/tests/data/: matplotlib.ipynb
glue_jupyter/plugins/path_slicer/: __init__.py  _dropdown.py  bqplot.py  common.py  matplotlib.py
glue_jupyter/plugins/path_slicer/tests/: test_path_slicer.py
glue_jupyter/plugins/pv_slicer/: __init__.py  bqplot.py  common.py  matplotlib.py
glue_jupyter/plugins/pv_slicer/tests/: test_pv_slicer.py
glue_jupyter/table/: __init__.py  table.vue  viewer.py  viewer_state.vue
glue_jupyter/table/tests/: test_table.py
glue_jupyter/tests/: data_viewer_test.py  helpers.py  main_test.py  test_session.py  test_state_traitlets_helpers.py  test_viewer_registry.py  test_vuetify_helpers.py
glue_jupyter/tests/data/: qt_session.glu  state_widgets.ipynb
glue_jupyter/tests/images/: py311-test-visual-bqplot012.json  py311-test-visual-dev.json  py311-test-visual.json
glue_jupyter/tests/ui/: test_selection.py  test_selection_handles.py
glue_jupyter/widgets/: __init__.py  axes_limits.py  axes_limits.vue  color.py  component.py  component_test.py  disconnect.py  glue_axes.vue  glue_float_field.py  glue_float_field.vue  glue_throttled_slider.vue  layer_options.py  layeroptions.vue  linked_dropdown.py  size.py  subset_mode.py  subset_mode_test.py  subset_mode_vuetify.py  subset_select.py  subset_select.vue  subset_select_test.py  subset_select_vuetify.py  temp.vue
glue_jupyter/widgets/tests/: test_component.py  test_linked_dropdown.py
notebooks/: Boston Planes.ipynb  L1448 in 3D.ipynb  W5 Tutorial.ipynb  demo_gaussian.ipynb  demo_image.ipynb  example.ipynb
notebooks/Astronomy/GAIA/: Distance to The Pleiades with Glupyter and Gaia DR2.ipynb  Distance to The Pleiades with Glupyter and Gaia DR3.ipynb
notebooks/Astronomy/L1448/: L1448 in 3D.ipynb
notebooks/Astronomy/W5/: W5 Tutorial.ipynb
notebooks/Experimental/: Profile viewer world labelling in pixels.ipynb  bqplot_scatter_density.ipynb
notebooks/Generic/: demo_gaussian.ipynb  demo_units_custom.ipynb
notebooks/Planes/: Boston Planes.ipynb
tests/ui/: selection_test.py  test_selection.py  test_selection_handles.py
