[metadata]
name = glue-jupyter
url = https://glueviz.org
author = Maarten A. Breddels and Thomas Robitaille
author_email = maartenbreddels@gmail.com
license = BSD License
description = Jupyter notebook/lab viewers for glue
long_description = file: README.rst

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires =
  setuptools_scm
install_requires =
    glue-core>=1.0
    glue-vispy-viewers>=1.0
    notebook>=4.0
    ipympl>=0.3.0
    ipyvolume>=0.5.0
    ipywidgets>=7.4.0
    ipyvue>=1.2.0,<2
    ipyvuetify>=1.2.0,<2
    bqplot-image-gl>=1.4.1
    bqplot>=0.12.17
    scikit-image

[options.extras_require]
test =
    pytest
    pytest-cov
    runipy
    codecov
    nbconvert>=5,<6
docs =
    sphinx
    sphinx-automodapi
    numpydoc
    nbsphinx
    sphinx-rtd-theme

[options.package_data]
glue_jupyter.table = *.vue
glue_jupyter.widgets = *.vue
glue_jupyter.common.state_widgets = *.vue
glue_jupyter = *.vue
glue_jupyter.common = *.vue
glue_jupyter.bqplot.tests = data/*.ipynb
glue_jupyter.ipyvolume.tests = data/*.ipynb
glue_jupyter.matplotlib.tests = data/*.ipynb
glue_jupyter.tests = data/*.ipynb

[flake8]
max-line-length = 100
