[metadata]
name = glue-jupyter
url = https://glueviz.org
author = Maarten A. Breddels and Thomas Robitaille
author_email = maartenbreddels@gmail.com
license = BSD License
description = Jupyter notebook/lab viewers for glue
long_description = file: README.rst

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires =
  setuptools_scm
install_requires =
    glue-core>=1.2.2
    glue-vispy-viewers>=1.0
    notebook>=4.0
    ipympl>=0.3.0
    ipyvolume>=0.5.0
    ipywidgets>=7.4.0
    ipyvue>=1.2.0,<2
    ipyvuetify>=1.2.0,<2
    bqplot-image-gl>=1.4.1
    bqplot>=0.12.17
    scikit-image

[options.extras_require]
test =
    pytest
    pytest-cov
    runipy
    codecov
    nbconvert>=5,<6
docs =
    sphinx
    sphinx-automodapi
    numpydoc
    nbsphinx
    sphinx-rtd-theme

[options.package_data]
glue_jupyter.table = *.vue
glue_jupyter.widgets = *.vue
glue_jupyter.common.state_widgets = *.vue
glue_jupyter = *.vue
glue_jupyter.common = *.vue
glue_jupyter.bqplot.tests = data/*.ipynb
glue_jupyter.ipyvolume.tests = data/*.ipynb
glue_jupyter.matplotlib.tests = data/*.ipynb
glue_jupyter.tests = data/*.ipynb
glue_jupyter.icons = *.svg

[tool:pytest]
# -Wignore: See https://github.com/glue-viz/glue-jupyter/issues/237
# -s: Disable stdout capturing
filterwarnings =
    error::DeprecationWarning
    ignore:the imp module is deprecated:DeprecationWarning:glue.config.*:
    ignore:`np.float` is a deprecated alias:DeprecationWarning:glue.*:
    # possibly more serious issue with overlapping memory in glue/utils/array.py:30: unbroadcast
    ignore:Numpy has detected .* writing to an array:DeprecationWarning:
    # matplotlib.cbook.deprecation.MatplotlibDeprecationWarning (currently only on Windows...)
    # as glue tries to unset 'keymap.all_axes' - the warning itself is considered deprecated / internal...
    ignore:The keymap.* rcparam was deprecated::glue.config.*:
    ignore:metadata .* was set from the constructor:DeprecationWarning:bqplot.*:
    ignore:default_opacities is deprecated:DeprecationWarning:bqplot.*:
    ignore:Traits should be given as instances:DeprecationWarning:bqplot_image_gl.*:
    ignore:Traits should be given as instances:DeprecationWarning:ipyvolume.*:
    ignore:Using or importing the ABCs from 'collections':DeprecationWarning:ipyvolume.*:
    # be thankful there is no SpellingWarning, traitlets!
    ignore:Passing unrecogi?nized arguments to super:DeprecationWarning:ipywidgets.*:
    ignore:defusedxml.cElementTree is deprecated:DeprecationWarning:nbconvert.filters.*:
    ignore:Keyword `trait:DeprecationWarning:pythreejs.*:
    ignore::DeprecationWarning:traittypes.*:
    ignore::FutureWarning:traitlets.*:
    # numpy/linalg/linalg.py:2514 (1.21) or numpy/core/_asarray.py:83 (1.19):
    # `x = asarray(x)` - triggered by `example_volume` from `ipv.examples.ball()
    ignore:Creating an ndarray from ragged nested sequences:numpy.VisibleDeprecationWarning:numpy.core.*:
    ignore:Creating an ndarray from ragged nested sequences:numpy.VisibleDeprecationWarning:numpy.linalg.*:
    ignore:'contextfilter' is renamed to 'pass_context':DeprecationWarning:
    # potentially more serious, but possibly also only erratic - report them, but don't raise
    # ignore:numpy.ndarray size changed:RuntimeWarning:astropy.*:
    # ignore:numpy.ufunc size changed:RuntimeWarning:pandas.*:

[flake8]
max-line-length = 100
