[metadata]
name = glue-jupyter
url = https://glueviz.org
author = Maarten A. Breddels and Thomas Robitaille
author_email = maartenbreddels@gmail.com
license = BSD License
description = Jupyter notebook/lab viewers for glue
long_description = file: README.rst

[options]
zip_safe = False
packages = find:
python_requires = >=3.8
setup_requires =
  setuptools_scm
install_requires =
    glue-core>=1.20.0
    glue-vispy-viewers[jupyter]>=1.2.1
    notebook>=4.0
    ipython_genutils>=0.2
    ipympl>=0.3.0
    ipyvolume>=0.5.0
    ipyvolume>=0.6.0a10; python_version >= '3.8'
    ipython_genutils>=0.2
    ipywidgets>=7.4.0
    ipyvue>=1.2.0,<2
    ipyvuetify>=1.2.0,<2
    bqplot-image-gl>=1.5.0
    bqplot>=0.12.17
    bqplot-gl
    scikit-image

[options.extras_require]
test =
    pytest
    pytest-cov
    nbconvert>=6.4.5
visualtest =
    playwright
    pytest-playwright
    pytest-mpl
    solara[pytest]<1.29
docs =
    sphinx
    sphinx-automodapi
    numpydoc
    nbconvert>=6.4.5
    nbsphinx
    sphinx-book-theme

[options.package_data]
glue_jupyter.table = *.vue
glue_jupyter.widgets = *.vue
glue_jupyter.common.state_widgets = *.vue
glue_jupyter = *.vue
glue_jupyter.common = *.vue
glue_jupyter.bqplot.tests = data/*.ipynb
glue_jupyter.ipyvolume.tests = data/*.ipynb
glue_jupyter.matplotlib.tests = data/*.ipynb
glue_jupyter.tests = data/*.ipynb
glue_jupyter.icons = *.svg

[tool:pytest]
# -Wignore: See https://github.com/glue-viz/glue-jupyter/issues/237
# -s: Disable stdout capturing
filterwarnings =
    # error::DeprecationWarning
    ignore:the imp module is deprecated:DeprecationWarning:glue.config.*:
    ignore:`np.float` is a deprecated alias:DeprecationWarning:glue.*:
    # possibly more serious issue with overlapping memory in glue/utils/array.py:30: unbroadcast
    ignore:Numpy has detected .* writing to an array:DeprecationWarning:
    # matplotlib.cbook.deprecation.MatplotlibDeprecationWarning (currently only on Windows...)
    # as glue tries to unset 'keymap.all_axes' - the warning itself is considered deprecated / internal...
    ignore:The keymap.* rcparam was deprecated::glue.config.*:
    ignore:metadata .* was set from the constructor:DeprecationWarning:bqplot.*:
    ignore:default_opacities is deprecated:DeprecationWarning:bqplot.*:
    ignore:Traits should be given as instances:DeprecationWarning:bqplot_image_gl.*:
    ignore:Traits should be given as instances:DeprecationWarning:ipyvolume.*:
    # breaking as of Python 3.10!
    ignore:Using or importing the ABCs from 'collections':DeprecationWarning:ipyvolume.*:
    # be thankful there is no SpellingWarning, traitlets!
    ignore:Passing unrecogi?nized arguments to super:DeprecationWarning:ipywidgets.*:
    # deprecated in Python 3.10
    ignore:the load_module.* method is deprecated and slated for removal in Python 3.12. use exec_module:DeprecationWarning:glue.*:
    ignore:There is no current event loop:DeprecationWarning:nbclient.*:
    ignore:defusedxml.cElementTree is deprecated:DeprecationWarning:nbconvert.filters.*:
    ignore:Keyword `trait:DeprecationWarning:pythreejs.*:
    ignore::DeprecationWarning:traittypes.*:
    ignore::FutureWarning:traitlets.*:
    # numpy/linalg/linalg.py:2514 (1.21) or numpy/core/_asarray.py:83 (1.19):
    # `x = asarray(x)` - triggered by `example_volume` from `ipv.examples.ball()
    ignore:Creating an ndarray from ragged nested sequences::numpy.core.*:
    ignore:Creating an ndarray from ragged nested sequences::numpy.linalg.*:
    ignore:'contextfilter' is renamed to 'pass_context':DeprecationWarning:
    # potentially more serious, but possibly also only erratic - report them, but don't raise
    # ignore:numpy.ndarray size changed:RuntimeWarning:astropy.*:
    # ignore:numpy.ufunc size changed:RuntimeWarning:pandas.*:
    ignore:Passing a schema:DeprecationWarning
    ignore:distutils Version:DeprecationWarning
    ignore:There is no current event loop:DeprecationWarning
    ignore:Jupyter is migrating its paths to use standard platformdirs:DeprecationWarning
    ignore:Widget._active_widgets is deprecated:DeprecationWarning
    ignore:Widget._widget_types is deprecated:DeprecationWarning
    ignore:Widget.widget_types is deprecated:DeprecationWarning
    ignore:Widget.widgets is deprecated:DeprecationWarning
    # deprecated in numpy 1.24, to be fixed in scikit-image 0.20:
    ignore:`np.bool8` is a deprecated alias for `np.bool_`.:DeprecationWarning:skimage.util.dtype.*:
    # Many glue plug-ins will trigger this until updated. Remove when common ones (e.g. vispy) have updated
    ignore:pkg_resources is deprecated as an API:DeprecationWarning
    # This catched a warning on mpl_toolkits which is currently unresolved
    # https://github.com/matplotlib/matplotlib/pull/25381
    ignore:Deprecated call to `pkg_resources.declare_namespace(.*)`:DeprecationWarning

[flake8]
max-line-length = 100
